MCA App/Release/MCA Dev Org/src/objects/Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Signifies if the Rule is active or not. If checked, the Rule Criteria for this Rule would execute else they would be ignored.</description>
        <inlineHelpText>Signifies if the Rule is active or not. If checked, the Rule Criteria for this Rule would execute else they would be ignored.</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Max_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field will identify that whether the rules max score should be considered for calculating Max Score on Opportunity.</description>
        <inlineHelpText>The field will identify that whether the rules max score should be considered for calculating Max Score on Opportunity.</inlineHelpText>
        <label>Exclude from Max. Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Rating_Possible__c</fullName>
        <description>Maximum that can be assigned to Deal if any criteria of this rule holds to true.</description>
        <inlineHelpText>Maximum that can be assigned to Deal if any criteria of this rule holds to true.</inlineHelpText>
        <label>Max. Rating Possible</label>
        <summarizedField>Rule_Criteria__c.Score_Value_to_Assign__c</summarizedField>
        <summaryForeignKey>Rule_Criteria__c.Rule__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scoring_Field_to_Update__c</fullName>
        <description>API Name of the field on Opportunity on which the Value to Assign score for the Rule Criteria evaluating to true will be updated.</description>
        <inlineHelpText>API Name of the field on Opportunity on which the Value to Assign score for the Rule Criteria evaluating to true will be updated.</inlineHelpText>
        <label>Scoring Field to Update</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Signifies the sequential order in which this Rule will be evaluated.</description>
        <inlineHelpText>Signifies the sequential order in which this Rule will be evaluated.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sort_Order__c</columns>
        <columns>Scoring_Field_to_Update__c</columns>
        <columns>Active__c</columns>
        <columns>Max_Rating_Possible__c</columns>
        <columns>Exclude_from_Max_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>